--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,3 +2,7 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 @import "jekyll-theme-prologue";
+
+#nav ul li a span::before{
+    color:#fd151b;
+}
