--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,27 +3,27 @@
 ---
 @import "jekyll-theme-prologue";
 
-#nav ul li a:active #my-great-homepage  span::before{
+#nav ul li a:active#my-great-homepage  span::before{
     color:#fd151b;
 }
 
-#nav ul li a #my-great-homepage  span::before{
+#nav ul li a#my-great-homepage  span::before{
     color:#fd5459;
 }
 
-#nav ul li a:active #amazing-blog-link  span::before{
+#nav ul li a:active#amazing-blog-link  span::before{
     color:#ffb30f;
 }
 
-#nav ul li #amazing-blog-link a span::before{
+#nav ul li a#amazing-blog-link  span::before{
     color:#ffce66;
 }
 
-#nav ul li a:active #reading-list-link  span::before{
+#nav ul li a:active#reading-list-link  span::before{
     color:#01295f;
 }
 
-#nav ul li a #reading-list-link  span::before{
+#nav ul li a#reading-list-link  span::before{
     color:#46638a;
 }
 
