--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,7 +3,7 @@
 ---
 @import "jekyll-theme-prologue";
 
-#nav ul li a:active span::before{ color:#849324;}
+#nav ul li a.active span::before{ color:#849324;}
 
 #nav ul li a:active#my-great-homepage span::before{ color:#fd151b;}
 #nav ul li a:active#my-great-homepage-link span::before{ color:#fd151b;}
@@ -22,6 +22,10 @@
 
 #nav ul li a#reading-list  span::before{  color:#46638a;}
 #nav ul li a#reading-list-link  span::before{  color:#46638a;}
+
+#nav ul li a#andica  span::before{  color:#44344f;}
+#nav ul li a#andica-link  span::before{  color:#44344f;}
+
 
 .justified {
     text-align: justify;
