--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,6 +3,24 @@
 ---
 @import "jekyll-theme-prologue";
 
+.ludwig {
+  position: relative;
+  padding-left: 1em;
+  border-left: 0.2em solid lighten($black, 40%);
+  line-height: $base-line-height;
+  font-weight: 100;
+  &:before, &:after {
+      content: '\201C';
+      font-family: 'Sanchez';
+      color: lighten($black, 40%);
+   }
+   &:after {
+      content: '\201D';
+   }
+}
+
+section .item header h3 { text-shadow: 0.3px 0.3px 0.5px;}
+
 #nav ul li a.active span::before{ color:#16a23f;}
 
 #nav ul li a#my-great-homepage span::before{ color:#fd151b;}
