--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,13 +6,12 @@
 .ludwig {
   position: relative;
   padding-left: 1em;
-  border-left: 0.2em solid lighten($black, 40%);
-  line-height: $base-line-height;
+  border-left: 0.2em solid #999999;
   font-weight: 100;
   &:before, &:after {
       content: '\201C';
       font-family: 'Sanchez';
-      color: lighten($black, 40%);
+      color: #999999;
    }
    &:after {
       content: '\201D';
