No background on logo

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,6 +18,8 @@
    }
 }
 
+#logo img { background: #222629;}
+
 section .item header h3 { text-shadow: 0.3px 0.3px 0.5px;}
 
 #nav ul li a.active span::before{ color:#16a23f;}
