rebasing to latest Jasper2

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -471,6 +471,19 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
     text-transform: uppercase;
 }
 
+.reading-time {
+    font-size: 1.2rem;
+    font-weight: 500;
+    line-height: 33px;
+    flex-shrink: 0;
+    margin-left: 20px;
+    letter-spacing: .5px;
+    text-transform: uppercase;
+    float: right;
+    margin-top: -4px;
+    color: var(--midgrey);
+}
+
 /* Special Styling for home page grid (below):
 
 The first (most recent) post in the list is styled to be bigger than the others and take over the full width of the grid to give it more emphasis. Wrapped in a media query to make sure this only happens on large viewports / desktop-ish devices.
@@ -1393,7 +1406,6 @@ Usage (In Ghost editor):
 .floating-header-logo {
     overflow: hidden;
     margin: 0 0 0 20px;
-    padding: 0 5px 0 0;
     font-size: 1.6rem;
     line-height: 1em;
     letter-spacing: -1px;
@@ -1499,7 +1511,7 @@ Usage (In Ghost editor):
     bottom: -1px;
     left: 0;
     width: 100%;
-    height: 4px;
+    height: 2px;
     border: none;
     color: var(--blue);
     background: transparent;
