--- a/_includes/floating-header.html
+++ b/_includes/floating-header.html
@@ -7,8 +7,8 @@
             <span>{{ site.title }}</span>
         </a>
     </div>
-    <span class="floating-header-divider"><b>&gt;</b></span>
-    <div class="floating-header-title"><a href="#">{{ page.title }}</a></div>
+    <span class="floating-header-divider">&mdash;</span>
+    <div class="floating-header-title">{{ page.title }}</div>
     <div class="floating-header-share">
         <div class="floating-header-share-label">Share this {% include point.html %}</div>
         <a class="floating-header-share-tw" href="https://twitter.com/share?text={{ page.title | url_encode }}&amp;url={{ site.production_url }}{{ page.url | remove_first: '/' }}"
