--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@
                     <a href="{{ site.baseurl }}">Latest Posts</a>
                     {% if site.linkedin %}<a href="https://linkedin.com/in/{{ site.linkedin }}" target="_blank" rel="noopener">LinkedIn</a>{% endif %}
                     {% if site.twitter %}<a href="https://twitter.com/{{ site.twitter }}" target="_blank" rel="noopener">Twitter</a>{% endif %}
-                    <a href="https://ibarrond.github.io/#contact" target="_blank" rel="noopener">Contact Me</a>
+                    <a href="mailto:ibarrond@eurecom.fr" target="_blank" rel="noopener">Contact Me</a>
                 </nav>
             </div>
         </footer>
