--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -19,8 +19,8 @@ logo: 'assets/images/ghost.png'
         <div class="site-header-content">
             <h1 class="site-title">{{ page.tag | capitalizeall }}</h1>
             <h2 class="site-description">
-                {% if page.tag.description %}
-                    {{ page.tag.description }}
+                {% if tag_description %}
+                    {{ tag_description }}
                 {% elsif page.tag %}
     			    A collection of {{ paginator.total_posts }} posts
                 {% endif %}
