--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,6 +3,6 @@
     <li class="nav-data-science" role="menuitem"><a href="{{site.baseurl}}tag/data-science/">Data Science</a></li>
     <li class="nav-dev" role="menuitem"><a href="{{site.baseurl}}tag/dev/">Dev</a></li>
     <li class="nav-cryptography" role="menuitem"><a href="{{site.baseurl}}tag/cryptography/">Cryptography</a></li>
-    <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}about/">About this blog</a></li>
-    <li class="nav-personal-webpage" role="menuitem"><a href="https://ibarrond.github.io/">Reading list</a></li>
+    <li class="nav-tags" role="menuitem"><a href="{{site.baseurl}}topics/">Topics</a></li>
+    <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}about/">About</a></li>
 </ul>
