--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -739,7 +739,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
 }
 
 .post-full-content a:hover {
-    color: var(--blue);
+    color:  #deacf1;
     text-decoration: none;
 }
 
