--- a/_includes/post-card-error.html
+++ b/_includes/post-card-error.html
@@ -13,7 +13,9 @@
             <div class="post-card-content">
                 <a class="post-card-content-link" href="{{ site.baseurl }}{{ post.url | remove_first: '/' }}">
                     <header class="post-card-header">
+                        <time class="post-card-tags-date" datetime="{{ page.date | date:'%e %B %Y' }}">{{ post.date | date:'%e %B %Y' }}</time>
                         {% if post.tags.size > 0 %}
+                        <span class="post-card-tags-date">/</span>
                             {% for tag in post.tags %}
                                 {% if forloop.index == post.tags.size %}
                                     <span class="post-card-tags">{{ tag | capitalize }}</span>
