--- a/_includes/post-card-next.html
+++ b/_includes/post-card-next.html
@@ -9,7 +9,9 @@
         <div class="post-card-content">
             <a class="post-card-content-link" href="{{ site.baseurl }}{{ page.next.url | remove_first: '/' }}">
                 <header class="post-card-header">
+                    <time class="post-card-tags-date" datetime="{{ page.next.date | date:'%e %B %Y' }}">{{ page.next.date | date:'%e %B %Y' }}</time>
                     {% if page.next.tags.size > 0 %}
+                    <span class="post-card-tags-date">/</span>
                         {% for tag in page.next.tags %}
                             {% if forloop.index == page.next.tags.size %}
                                 <span class="post-card-tags">{{ tag | capitalize }}</span>
