--- a/_includes/post-card-previous.html
+++ b/_includes/post-card-previous.html
@@ -9,12 +9,14 @@
         <div class="post-card-content">
             <a class="post-card-content-link" href="{{ site.baseurl }}{{ page.previous.url | remove_first: '/' }}">
                 <header class="post-card-header">
+                    <time class="post-card-tags-date" datetime="{{ page.previous.date | date:'%e %B %Y' }}">{{ page.previous.date | date:'%e %B %Y' }}</time>
                     {% if page.previous.tags.size > 0 %}
+                    <span class="post-card-tags-date">/</span>
                         {% for tag in page.previous.tags %}
                             {% if forloop.index == page.previous.tags.size %}
                                 <span class="post-card-tags">{{ tag | capitalize }}</span>
                             {% else %}
-                               <span class="post-card-tags">{{ tag | capitalize }}, </span>
+                                <span class="post-card-tags">{{ tag | capitalize }}, </span>
                             {% endif %}
                         {% endfor %}
                     {% endif %}
