--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -10,16 +10,17 @@
         <div class="post-card-content">
             <a class="post-card-content-link" href="{{ site.baseurl }}{{ post.url | remove_first: '/' }}">
                 <header class="post-card-header">
+                    <time class="post-card-tags-date" datetime="{{ page.date | date:'%e %B %Y' }}">{{ post.date | date:'%e %B %Y' }}</time>
                     {% if post.tags.size > 0 %}
+                    <span class="post-card-tags-date">/</span>
                         {% for tag in post.tags %}
                             {% if forloop.index == post.tags.size %}
                                 <span class="post-card-tags">{{ tag | capitalize }}</span>
                             {% else %}
-                               <span class="post-card-tags">{{ tag | capitalize }}, </span>
+                                <span class="post-card-tags">{{ tag | capitalize }}, </span>
                             {% endif %}
                         {% endfor %}
                     {% endif %}
-
                     <h2 class="post-card-title">{{ post.title }}</h2>
                 </header>
                 <section class="post-card-excerpt">
