--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -15,9 +15,9 @@
                     <span class="post-card-tags-date">/</span>
                         {% for tag in post.tags %}
                             {% if forloop.index == post.tags.size %}
-                                <span class="post-card-tags">{{ tag | capitalize }}</span>
+                                <span class="post-card-tags-date">{{ tag | capitalize }}</span>
                             {% else %}
-                                <span class="post-card-tags">{{ tag | capitalize }}, </span>
+                                <span class="post-card-tags-date">{{ tag | capitalize }}, </span>
                             {% endif %}
                         {% endfor %}
                     {% endif %}
