Multiple style changes. Fixing Search bar

--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -112,6 +112,6 @@ search.addWidget(
 		  $('.ais-search-box--input').focus();
 	  }
 	  $('.ais-search-box--input').toggleClass('open');	  
-  }
-  $('.search-icon').on('click', expand);
+  };
+  $('#search-icon').on('click', expand);
   </script>
