--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,12 +61,12 @@
                 <section class="copyright"><a href="{{ site.url }}{{ site.baseurl }}">{{ site.title }}</a> &copy; {{  site.time | date: '%Y' }}</section>
                 <section class="poweredby">Published with <a href="https://jekyllrb.com/">Jekyll</a> &
                     <a href="https://pages.github.com/" target="_blank" rel="noopener">GitHub Pages</a> from 
-                    <a href="https://github.com/ibarrond/ibarrond.github.io" target="_blank" rel="noopener">this source repo</a></section>
+                    <a href="https://github.com/ibarrond/ibarrond.github.io" target="_blank" rel="noopener">this <b>source repo</b>.</a></section>
                 <nav class="site-footer-nav">
                     <a href="{{ site.baseurl }}">Latest Posts</a>
                     <!-- {% if site.linkedin %}<a href="https://linkedin.com/in/{{ site.linkedin }}" target="_blank" rel="noopener">LinkedIn</a>{% endif %}
                     {% if site.twitter %}<a href="https://twitter.com/{{ site.twitter }}" target="_blank" rel="noopener">Twitter</a>{% endif %} -->
-                    <a href="mailto:ibarrond@eurecom.fr" target="_blank" rel="noopener">Contact Me</a>
+                    <a href="mailto:ibarrond@eurecom.fr" target="_blank" rel="noopener">Contact Blog Owner</a>
                 </nav>
             </div>
         </footer>
