Tweaking algolia search + footbar icons

--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -113,5 +113,7 @@ search.addWidget(
 	  }
 	  $('.ais-search-box--input').toggleClass('open');	  
   };
+  </script>
+  <script>
   $('#search-icon').on('click', expand);
   </script>
