--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,9 +63,20 @@
                     <a href="https://pages.github.com/" target="_blank" rel="noopener">GitHub Pages</a> from 
                     <a href="https://github.com/ibarrond/ibarrond.github.io" target="_blank" rel="noopener">this <b>source repo</b>.</a></section>
                 <nav class="site-footer-nav">
-                    <a href="{{ site.baseurl }}">Latest Posts</a>
-                    <!-- {% if site.linkedin %}<a href="https://linkedin.com/in/{{ site.linkedin }}" target="_blank" rel="noopener">LinkedIn</a>{% endif %}
-                    {% if site.twitter %}<a href="https://twitter.com/{{ site.twitter }}" target="_blank" rel="noopener">Twitter</a>{% endif %} -->
+                    <div class="social-links">
+                        {% if site.linkedin %}
+                            <a class="social-link social-link-fb" href="https://linkedin.com/in/{{ site.linkedin }}" target="_blank" rel="noopener">{% include linkedin.html %}</a>
+                        {% endif %}
+                        {% if site.twitter %}
+                            <a class="social-link social-link-tw" href="https://twitter.com/{{ site.twitter }}" target="_blank" rel="noopener">{% include twitter.html %}</a>
+                        {% endif %}
+                        {% if site.github %}
+                            <a class="social-link social-link-gh" href="https://github.com/{{ site.github }}" target="_blank" rel="noopener">{% include github.html %}</a>
+                        {% endif %}
+                        {% if site.mail %}
+                            <a class="social-link social-link-mail" href="mailto:{{ site.mail }}" rel="noopener">{% include mail.html %}</a>
+                        {% endif %}
+                    </div>
                     <a href="mailto:ibarrond@eurecom.fr" target="_blank" rel="noopener">Contact Blog Owner</a>
                 </nav>
             </div>
