Trying to fix Algolia

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -115,6 +115,9 @@
     </script>
     <script type="text/javascript" src="{{ site.baseurl }}assets/js/jquery.fitvids.js"></script>
     <script type="text/javascript" src="https://demo.ghost.io/assets/js/jquery.fitvids.js?v=724281a32e"></script>
+    <script type="text/javascript">$('#search-icon').on('click', expand);</script>
+    <script type="text/javascript">$('#search-searchbar').on('click', expand);</script>
+    
 
 
     <!-- Paginator increased to "infinit" in _config.yml -->
