--- a/_includes/post-card-next.html
+++ b/_includes/post-card-next.html
@@ -9,7 +9,7 @@
         <div class="post-card-content">
             <a class="post-card-content-link" href="{{ site.baseurl }}{{ page.next.url | remove_first: '/' }}">
                 <header class="post-card-header">
-                    <time class="post-card-tags-date" datetime="{{ page.next.date | date:'%e %B %Y' }}">{{ page.next.date | date:'%e %B %Y' }}</time>
+                    <time class="post-card-tags-date" datetime="{{ page.next.date | date:'%Y-%m-%d' }}">{{ page.next.date | date:'%Y-%m-%d' }}</time>
                     {% if page.next.tags.size > 0 %}
                     <span class="post-card-tags-date">/</span>
                         {% for tag in page.next.tags %}
