--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -10,7 +10,7 @@
         <div class="post-card-content">
             <a class="post-card-content-link" href="{{ site.baseurl }}{{ post.url | remove_first: '/' }}">
                 <header class="post-card-header">
-                    <time class="post-card-tags-date" datetime="{{ page.date | date:'%e %B %Y' }}">{{ post.date | date:'%e %B %Y' }}</time>
+                    <time class="post-card-tags-date" datetime="{{ page.date | date:'%Y-%m-%d' }}">{{ post.date | date:'%Y-%m-%d' }}</time>
                     {% if post.tags.size > 0 %}
                     <span class="post-card-tags-date">/</span>
                         {% for tag in post.tags %}
