--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -115,7 +115,11 @@
     </script>
     <script type="text/javascript" src="{{ site.baseurl }}assets/js/jquery.fitvids.js"></script>
     <script type="text/javascript" src="https://demo.ghost.io/assets/js/jquery.fitvids.js?v=724281a32e"></script>
-    <script type="text/javascript">$('#search-icon').on('click', expand);</script>
+    
+    {% if page.class == 'home-template' %}
+        <script type="text/javascript">$('#search-icon').on('click', expand);</script>
+        <script type="text/javascript">$('.ais-search-box--reset').on('click', hideSearchResults);</script>
+    {% endif %}
     
 
 
