--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -294,9 +294,10 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
 
 .ais-match-highlight{
 	font-weight: bold;
-	text-decoration-line: underline;
+	text-decoration-line: nones;
 	text-decoration-style: solid;
-	color: #000000;
+    color: #000000;
+    text-shadow: 0.85px 0.85px #00000068;
 }
 
 .ais-search-box{
